// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestApp snapshot assertions > captures initial board screen as default snapshot 1`] = `
" 📁 board > Next > Buy groceries                                CARDS VIEW CL:3

   Next                                  Waiting                             ▸
 ────────────────────────────────────── ──────────────────────────────────────
 ╭────────────────────────────────────╮ ╭────────────────────────────────────╮ ▸
 │□Buy groceries                      │ │□@JoseChu — file US Form 4868       │
 ╰────────────────────────────────────╯ │ extension                          │ ▸
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯
 │□Fix plumbing — call 2024-01-16     │ ╭────────────────────────────────────╮ ▸
 ╰────────────────────────────────────╯ │□Insurance claim #4421              │
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯ ▸
 │ +Taxes — reply to @Shubam         │
 │□ (1) confirm Q1 figures            │                                        ▸
 │□ (2) send W-2 copies               │
 ╰────────────────────────────────────╯                                        ▸
 ╭────────────────────────────────────╮
 │□ Schedule dentist                  │                                        ▸
 ╰────────────────────────────────────╯
                                                                               ▸
                                                            MEM /fake/repo 📋21"
`;

exports[`TestApp snapshot assertions > captures named snapshots after cursor navigation > after-two-downs 1`] = `
" 📁 board > Next > +Taxes — reply to @Shubam                    CARDS VIEW CL:3

   Next                                  Waiting                             ▸
 ────────────────────────────────────── ──────────────────────────────────────
 ╭────────────────────────────────────╮ ╭────────────────────────────────────╮ ▸
 │□Buy groceries                      │ │□@JoseChu — file US Form 4868       │
 ╰────────────────────────────────────╯ │ extension                          │ ▸
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯
 │□Fix plumbing — call 2024-01-16     │ ╭────────────────────────────────────╮ ▸
 ╰────────────────────────────────────╯ │□Insurance claim #4421              │
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯ ▸
 │ +Taxes — reply to @Shubam         │
 │□ (1) confirm Q1 figures            │                                        ▸
 │□ (2) send W-2 copies               │
 ╰────────────────────────────────────╯                                        ▸
 ╭────────────────────────────────────╮
 │□ Schedule dentist                  │                                        ▸
 ╰────────────────────────────────────╯
                                                                               ▸
                                                            MEM /fake/repo 📋21"
`;

exports[`TestApp snapshot assertions > captures named snapshots after cursor navigation > initial 1`] = `
" 📁 board > Next > Buy groceries                                CARDS VIEW CL:3

   Next                                  Waiting                             ▸
 ────────────────────────────────────── ──────────────────────────────────────
 ╭────────────────────────────────────╮ ╭────────────────────────────────────╮ ▸
 │□Buy groceries                      │ │□@JoseChu — file US Form 4868       │
 ╰────────────────────────────────────╯ │ extension                          │ ▸
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯
 │□Fix plumbing — call 2024-01-16     │ ╭────────────────────────────────────╮ ▸
 ╰────────────────────────────────────╯ │□Insurance claim #4421              │
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯ ▸
 │ +Taxes — reply to @Shubam         │
 │□ (1) confirm Q1 figures            │                                        ▸
 │□ (2) send W-2 copies               │
 ╰────────────────────────────────────╯                                        ▸
 ╭────────────────────────────────────╮
 │□ Schedule dentist                  │                                        ▸
 ╰────────────────────────────────────╯
                                                                               ▸
                                                            MEM /fake/repo 📋21"
`;

exports[`TestApp snapshot assertions > multiple expectSnapshot calls in one test produce numbered entries 1`] = `
" 📁 board > Next > Buy groceries                                CARDS VIEW CL:3

   Next                                  Waiting                             ▸
 ────────────────────────────────────── ──────────────────────────────────────
 ╭────────────────────────────────────╮ ╭────────────────────────────────────╮ ▸
 │□Buy groceries                      │ │□@JoseChu — file US Form 4868       │
 ╰────────────────────────────────────╯ │ extension                          │ ▸
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯
 │□Fix plumbing — call 2024-01-16     │ ╭────────────────────────────────────╮ ▸
 ╰────────────────────────────────────╯ │□Insurance claim #4421              │
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯ ▸
 │ +Taxes — reply to @Shubam         │
 │□ (1) confirm Q1 figures            │                                        ▸
 │□ (2) send W-2 copies               │
 ╰────────────────────────────────────╯                                        ▸
 ╭────────────────────────────────────╮
 │□ Schedule dentist                  │                                        ▸
 ╰────────────────────────────────────╯
                                                                               ▸
                                                            MEM /fake/repo 📋21"
`;

exports[`TestApp snapshot assertions > multiple expectSnapshot calls in one test produce numbered entries 2`] = `
" 📁 board > Waiting > @JoseChu — file US Form 4868 extension    CARDS VIEW CL:3

   Next                                  Waiting                             ▸
 ────────────────────────────────────── ──────────────────────────────────────
 ╭────────────────────────────────────╮ ╭────────────────────────────────────╮ ▸
 │□Buy groceries                      │ │□@JoseChu — file US Form 4868       │
 ╰────────────────────────────────────╯ │ extension                          │ ▸
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯
 │□Fix plumbing — call 2024-01-16     │ ╭────────────────────────────────────╮ ▸
 ╰────────────────────────────────────╯ │□Insurance claim #4421              │
 ╭────────────────────────────────────╮ ╰────────────────────────────────────╯ ▸
 │ +Taxes — reply to @Shubam         │
 │□ (1) confirm Q1 figures            │                                        ▸
 │□ (2) send W-2 copies               │
 ╰────────────────────────────────────╯                                        ▸
 ╭────────────────────────────────────╮
 │□ Schedule dentist                  │                                        ▸
 ╰────────────────────────────────────╯
                                                                               ▸
                                                            MEM /fake/repo 📋21"
`;
